Link fix on pricing page

--- a/pricing.html
+++ b/pricing.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1154"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1158"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1154" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1154"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1158" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1158"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1154">
-<script src="./assets/js/layout.ie.js?1.0.1154"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1158">
+<script src="./assets/js/layout.ie.js?1.0.1158"></script>
 <![endif]-->
 <link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1154"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1158"></script>
 	
     <title>Affordable Digital Marketing Support Pricing  Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1154">
-	<script src="./assets/js/script.js?1.0.1154"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1158">
+	<script src="./assets/js/script.js?1.0.1158"></script>
     <meta charset="utf-8">
     
     
@@ -228,7 +228,7 @@
 	
 		<div class="bd-containereffect-9 container-effect container ">
 <p class=" bd-textblock-192  bd-content-element">
-    Prices may vary based on project size and special requirements. Further support is available. Feel free to&nbsp;<a href="http://127.0.0.1:12080/contact.html" style="background-color: rgb(255, 255, 255);">contact me</a>&nbsp;regarding your specific needs and I will send you a quote.
+    Prices may vary based on project size and special requirements. Further support is available. Feel free to&nbsp;<span style="background-color: rgb(255, 255, 255);"><a href="https://smartsprout.co.uk/free-consultation.html">contact me</a></span>&nbsp;regarding your specific needs and I will send you a quote.
 </p>
 </div>
 	
@@ -259,8 +259,8 @@
 		<div class=" bd-layoutbox-21 bd-no-margins clearfix">
     <div class="bd-container-inner">
         <a 
- href="free-consultation.html" class="bd-linkbutton-7  bd-button-23  bd-own-margins bd-content-element"    >
-    I'm Interested
+ href="free-consultation.html" class="bd-linkbutton-15  bd-button-33  bd-own-margins bd-content-element"    >
+    I'm interested
 </a>
 	
 		<p class=" bd-textblock-67 bd-content-element">
@@ -291,8 +291,8 @@
 		<div class=" bd-layoutbox-50 bd-no-margins clearfix">
     <div class="bd-container-inner">
         <a 
- href="free-consultation.html" class="bd-linkbutton-35  bd-button-58  bd-own-margins bd-content-element"    >
-    I'm Interested
+ href="free-consultation.html" class="bd-linkbutton-25  bd-button-57  bd-own-margins bd-content-element"    >
+    I'm interested
 </a>
 	
 		<p class=" bd-textblock-77 bd-content-element">
@@ -323,8 +323,8 @@
 		<div class=" bd-layoutbox-54 bd-no-margins clearfix">
     <div class="bd-container-inner">
         <a 
- href="free-consultation.html" class="bd-linkbutton-36  bd-button-59  bd-own-margins bd-content-element"    >
-    I'm Interested
+ href="free-consultation.html" class="bd-linkbutton-26  bd-button-62  bd-own-margins bd-content-element"    >
+    I'm interested
 </a>
 	
 		<p class=" bd-textblock-177 bd-content-element">
@@ -359,8 +359,8 @@
 		<div class=" bd-layoutbox-58 bd-no-margins clearfix">
     <div class="bd-container-inner">
         <a 
- href="free-consultation.html" class="bd-linkbutton-37  bd-button-60  bd-own-margins bd-content-element"    >
-    I'm Interested
+ href="free-consultation.html" class="bd-linkbutton-27  bd-button-63  bd-own-margins bd-content-element"    >
+    I'm interested
 </a>
 	
 		<p class=" bd-textblock-188 bd-content-element">
