--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1196"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1240"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1196" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1196"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1240" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1240"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1196">
-<script src="./assets/js/layout.ie.js?1.0.1196"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1240">
+<script src="./assets/js/layout.ie.js?1.0.1240"></script>
 <![endif]-->
 <link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1196"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1240"></script>
 	
     <title>Smart Sprout - Affordable Digital Marketing Support  Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1196">
-	<script src="./assets/js/script.js?1.0.1196"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1240">
+	<script src="./assets/js/script.js?1.0.1240"></script>
     <meta charset="utf-8">
     
     <a href="https://smartsprout.co.uk/free-consultation"> <div class="side-button" id="free-consultation"></div> </a>
@@ -48,7 +48,46 @@ H3 {
 H4 {
   font-size: 2vw;
 }
-</style>
+
+
+/* - - - - Home Page Background Video - - - - */
+
+* { box-sizing: border-box; }
+.video-background {
+  background: #000;
+  position: fixed;
+  top: 0; right: 0; bottom: 0; left: 0;
+  z-index: -99;
+}
+.video-foreground,
+.video-background iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+#vidtop-content {
+	top: 0;
+	color: #fff;
+}
+.vid-info { position: absolute; top: 0; right: 0; width: 33%; background: rgba(0,0,0,0.3); color: #fff; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
+.vid-info h1 { font-size: 2rem; font-weight: 700; margin-top: 0; line-height: 1.2; }
+.vid-info a { display: block; color: #fff; text-decoration: none; background: rgba(0,0,0,0.5); transition: .6s background; border-bottom: none; margin: 1rem auto; text-align: center; }
+@media (min-aspect-ratio: 16/9) {
+  .video-foreground { height: 300%; top: -100%; }
+}
+@media (max-aspect-ratio: 16/9) {
+  .video-foreground { width: 300%; left: -100%; }
+}
+@media all and (max-width: 600px) {
+.vid-info { width: 50%; padding: .5rem; }
+.vid-info h1 { margin-bottom: .2rem; }
+}
+@media all and (max-width: 500px) {
+.vid-info .acronym { display: none; }
+}</style>
 </head>
 <body class=" bootstrap bd-body-1 
  bd-homepage bd-pagebackground-3  bd-margins">
