Header layout update

--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1263"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1271"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1263" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1263"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1271" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1271"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1263">
-<script src="./assets/js/layout.ie.js?1.0.1263"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1271">
+<script src="./assets/js/layout.ie.js?1.0.1271"></script>
 <![endif]-->
 <link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1263"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1271"></script>
 	
     <title>Affordable Digital Marketing Support - Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1263">
-	<script src="./assets/js/script.js?1.0.1263"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1271">
+	<script src="./assets/js/script.js?1.0.1271"></script>
     <meta charset="utf-8">
     
     <a href="https://smartsprout.co.uk/free-consultation"> <div class="side-button" id="free-consultation"></div> </a>
@@ -33,22 +33,7 @@
 
 <meta name="description" content="Smart Sprout delivers world-class digital marketing support at affordable prices. Low-cost marketing support">
     
- <style>a {
-  transition: color 250ms linear;
-}
-
-H2 {
-  font-size: 5.5vw;
-}
-
-H3 {
-  font-size: 3vw;
- }
-  
-H4 {
-  font-size: 2vw;
-}
-
+ <style>
 </style>
 </head>
 <body class=" bootstrap bd-body-1 
@@ -315,8 +300,20 @@ H4 {
     Affordable Digital Marketing Support from Smart Sprout<br>
 </h1>
 	
+		<h2 class=" bd-textblock-3 bd-content-element">
+    Why is Smart Sprout cheaper than other digital marketing agencies?
+</h2>
+	
 		<p class=" bd-textblock-137 bd-content-element">
-    Until now, digital marketing support has only been accessible to those with money to burn. However, that era has thankfully come to an end. Smart Sprout will guide you through the steps necessary to push your website to the top of the search listings, engage your market, build your mailing list, improve your sales conversions and more.&nbsp;<br><br><br>Whatever your business needs, whether it's <b>search engine optimisation</b> (SEO), a high converting <b>pay per click</b> (PPC) campaign, or even help sourcing a trusted website developer or graphic designer, you have come to the right place!
+    Until now, digital marketing support has only been accessible to those with money to burn. However, that era has thankfully come to an end. Smart Sprout will guide you through the steps necessary to push your website to the top of the search listings, engage your market, build your mailing list, improve your sales conversions and more.&nbsp;<br><br>Whatever your business needs, whether it's <b>search engine optimisation</b> (SEO), a high converting <b>pay per click</b> (PPC) campaign, or even help sourcing a trusted website developer or graphic designer, you have come to the right place!
+</p>
+	
+		<h2 class=" bd-textblock-8 bd-content-element">
+    How does Smart Sprout keep digital marketing support costs so low?
+</h2>
+	
+		<p class=" bd-textblock-17 bd-content-element">
+    Smart Sprout is a one-man <b>digital marketing agency</b> that offers clients a seamless experience and effective results at a low price-tag. In addition to affordable digital marketing support, <b>Smart Sprout provides, agency-like, managed services</b> such as copy-writing, PR, graphic design and website development through trusted, reliable third parties. Because these services are provided externally, there are no salaries to pay the client only pays for what they get.<br><br><br>Clients are also encouraged to learn effective digital marketing methods through <b>regular mentoring sessions</b>. This helps to improve online processes processes moving forward, reduce overall costs and enhance results. If you have any questions, or you would just like a chat please <a href="https://smartsprout.co.uk/contact.html" draggable="false"><b>get in touch</b></a>.
 </p>
 	
 		<div class=" bd-spacer-20 clearfix"></div>
