Replaced "-" with "|" in Title Tag

--- a/free-digital-marketing-tips.html
+++ b/free-digital-marketing-tips.html
@@ -20,7 +20,7 @@
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
 <script src="./assets/js/CloudZoom.js?1.0.1279"></script>
 	
-    <title>Smart Sprout - Free Digital Marketing Tips</title>
+    <title>Smart Sprout | Free Digital Marketing Tips</title>
 	<link rel="stylesheet" href="./assets/css/style.css?1.0.1279">
 	<script src="./assets/js/script.js?1.0.1279"></script>
     <meta charset="utf-8">
