--- a/digital-marketing-services.html
+++ b/digital-marketing-services.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1296"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1302"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1296" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1296"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1302" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1302"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1296">
-<script src="./assets/js/layout.ie.js?1.0.1296"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1302">
+<script src="./assets/js/layout.ie.js?1.0.1302"></script>
 <![endif]-->
 <link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1296"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1302"></script>
 	
     <title>Affordable Digital Marketing Services | Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1296">
-	<script src="./assets/js/script.js?1.0.1296"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1302">
+	<script src="./assets/js/script.js?1.0.1302"></script>
     <meta charset="utf-8">
     
     <a href="https://smartsprout.co.uk/free-consultation"> <div class="side-button" id="free-consultation"></div> </a>
@@ -395,17 +395,13 @@
 	
 		<div class=" bd-spacer-5 clearfix"></div>
 	
-		<div class=" bd-customhtml-18 bd-tagstyles">
-    <div class="bd-container-inner bd-content-element">
-        <!-- - - - Local Business Schema - - - -->
-
-<div itemscope itemtype="http://schema.org/LocalBusiness">
-<a itemprop="url" href="https://smartsprout.co.uk"><div itemprop="name"><strong>Smart Sprout Digital Marketing</strong></div></a>
-<div itemprop="description">Affordable digital marketing support with honest pricing and weekly mentoring available. Smart Sprout services include SEO, content strategy, pay per click campaign management.</div>
-
-<!-- - - - End: Local Business Schema - - - --></div>
-    </div>
-</div></div></div>
+		<p class=" bd-textblock-80 bd-no-margins bd-content-element">
+    Contact:
+</p>
+	
+		<p class=" bd-textblock-71 bd-content-element">
+    <a href="mailto:info@smartsprout.co.uk">info@smartsprout.co.uk</a>
+</p></div></div>
 </div>
 	
 		<div class=" bd-columnwrapper-14 
@@ -415,21 +411,13 @@
 	
 		<div class=" bd-spacer-7 clearfix"></div>
 	
-		<div class=" bd-customhtml-8 bd-tagstyles bd-no-margins">
-    <div class="bd-container-inner bd-content-element">
-        <!-- - - - Local Business Schema - - - -->
-
-<div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-<strong>Address : </strong><br><span itemprop="streetAddress">5 Glen Road</span>,<br>
-<span itemprop="addressLocality">Southampton</span>,<br>
-<span itemprop="addressRegion">Hampshire</span> - 
-<span itemprop="postalCode">SO19 9EJ</span><br>
-<span itemprop="addressCountry">United Kingdom</span>.<br>
-</div>
-
-<!-- - - - End: Local Business Address Schema - - - -->
-    </div>
-</div></div></div>
+		<p class=" bd-textblock-83 bd-no-margins bd-content-element">
+    Location:
+</p>
+	
+		<p class=" bd-textblock-85 bd-content-element">
+    Southampton, UK
+</p></div></div>
 </div>
 	
 		<div class=" bd-columnwrapper-16 
@@ -445,7 +433,7 @@
 	
 		<div class=" bd-customhtml-2 bd-tagstyles">
     <div class="bd-container-inner bd-content-element">
-        <p class="footer-links"><a href="./" draggable="false">Low-cost Marketing<br></a></p><p class="footer-links"><a href="./pricing.html" draggable="false">Smart Sprout Pricing</a></p><p class="footer-links"><a href="./" draggable="false">Affordable Marketing Tips</a></p><p class="footer-links"><a href="./contact.html" draggable="false">Contact&nbsp;Smart Sprout</a></p><p class="footer-links"><br></p>
+        <p class="footer-links"><a href="./" draggable="false">Low-cost Marketing<br></a></p><p class="footer-links"><a href="./pricing.html" draggable="false">Smart Sprout Pricing</a></p><p class="footer-links"><a href="./contact.html" draggable="false" style="background-color: rgb(133, 133, 133);">Contact&nbsp;Smart Sprout</a><br></p><p class="footer-links"><br></p>
     </div>
 </div></div></div>
 </div>
@@ -476,7 +464,38 @@
 	
 		<p class=" bd-textblock-20 bd-content-element">
     © 2017 Smart Sprout.<br>All Rights Reserved.
-</p></div></div>
+</p>
+	
+		<div class=" bd-customhtml-20 bd-tagstyles">
+    <div class="bd-container-inner bd-content-element">
+        <script type="application/ld+json">
+{
+	"@context": "http://schema.org",
+	"@type": "LocalBusiness",
+	"name": "Smart Sprout Affordable Digital Marketing",
+	"address": {
+		"@type": "PostalAddress",
+		"streetAddress": "5 Glen Road",
+		"addressLocality": "Southampton",
+		"addressRegion": "Hampshire",
+		"postalCode": "SO19 9EJ"
+	},
+	"image": "https://smartsprout.co.uk/smartsprout-image.png",
+	"email": "info@smartsprout.co.uk",
+	"telePhone": "023 8124 2693",
+	"url": "https://smartsprout.co.uk",
+	"paymentAccepted": [ "cash", "invoice", "paypal" ],
+	"openingHours": "Mo,Tu,We,Th,Fr,Sa,Su 10:00-20:00",
+	"geo": {
+		"@type": "GeoCoordinates",
+		"latitude": "50.876106",
+		"longitude": "-1.284641"
+	},
+	"priceRange":"£60 - £347"
+}
+</script>
+    </div>
+</div></div></div>
 </div>
             </div>
         </div>
