Home video muted

--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1306"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1307"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1306" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1306"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1307" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1307"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1306">
-<script src="./assets/js/layout.ie.js?1.0.1306"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1307">
+<script src="./assets/js/layout.ie.js?1.0.1307"></script>
 <![endif]-->
 <link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1306"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1307"></script>
 	
     <title>Affordable Digital Marketing Support | Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1306">
-	<script src="./assets/js/script.js?1.0.1306"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1307">
+	<script src="./assets/js/script.js?1.0.1307"></script>
     <meta charset="utf-8">
     
     <a href="https://smartsprout.co.uk/free-consultation"> <div class="side-button" id="free-consultation"></div> </a>
@@ -245,7 +245,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="bd-container-inner bd-content-element">
         <div class="video-background">
     <div class="video-foreground">
-      <iframe src="https://www.youtube.com/embed/AYmZaEVOIIs?controls=0&amp;showinfo=0&amp;rel=0&amp;autoplay=1&amp;loop=1&amp;playlist=AYmZaEVOIIs" poster="https://smartsprout.co.uk/smartsprout-background.jpg" frameborder="0" allowfullscreen=""></iframe>
+      <iframe src="https://www.youtube.com/embed/AYmZaEVOIIs?controls=0&amp;showinfo=0&amp;rel=0&amp;autoplay=1&amp;mute=1&amp;loop=1&amp;playlist=AYmZaEVOIIs" poster="https://smartsprout.co.uk/smartsprout-background.jpg" frameborder="0" allowfullscreen=""></iframe>
     </div>
   </div>
 
