Fixed spelling error Testimonials

--- a/search-engine-optimisation.html
+++ b/search-engine-optimisation.html
@@ -20,7 +20,7 @@
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
 <script src="./assets/js/CloudZoom.js?1.0.1337"></script>
 	
-    <title>Search Engine Optimisation - Smart Sprout</title>
+    <title>Search Engine Optimisation | Smart Sprout</title>
 	<link rel="stylesheet" href="./assets/css/style.css?1.0.1337">
 	<script src="./assets/js/script.js?1.0.1337"></script>
     <meta charset="utf-8">
