SEO page responsive fix
also added static home banner

--- a/digital-marketing-services/search-engine-optimisation.html
+++ b/digital-marketing-services/search-engine-optimisation.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="../assets/js/jquery.js?1.0.1362"></script>
+<script type="text/javascript" src="../assets/js/jquery.js?1.0.1364"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="../assets/css/bootstrap.css?1.0.1362" media="screen" />
-<script type="text/javascript" src="../assets/js/bootstrap.min.js?1.0.1362"></script>
+<link rel="stylesheet" href="../assets/css/bootstrap.css?1.0.1364" media="screen" />
+<script type="text/javascript" src="../assets/js/bootstrap.min.js?1.0.1364"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="../assets/css/layout.ie.css?1.0.1362">
-<script src="../assets/js/layout.ie.js?1.0.1362"></script>
+<link rel="stylesheet" href="../assets/css/layout.ie.css?1.0.1364">
+<script src="../assets/js/layout.ie.js?1.0.1364"></script>
 <![endif]-->
 <link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="../assets/js/layout.core.js"></script>
-<script src="../assets/js/CloudZoom.js?1.0.1362"></script>
+<script src="../assets/js/CloudZoom.js?1.0.1364"></script>
 	
-    <title>Search Engine Optimisation | Smart Sprout</title>
-	<link rel="stylesheet" href="../assets/css/style.css?1.0.1362">
-	<script src="../assets/js/script.js?1.0.1362"></script>
+    <title>Search Engine Optimisation - Smart Sprout</title>
+	<link rel="stylesheet" href="../assets/css/style.css?1.0.1364">
+	<script src="../assets/js/script.js?1.0.1364"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -287,7 +287,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="container-fluid">
             <div class="row ">
                 <div class=" bd-columnwrapper-64 
- col-sm-6">
+ col-lg-3
+ col-md-6
+ col-sm-6
+ col-xs-12">
     <div class="bd-layoutcolumn-64 bd-column" ><div class="bd-vertical-align-wrapper"><div class=" bd-layoutbox-40 bd-no-margins clearfix">
     <div class="bd-container-inner">
         <h2 class=" bd-textblock-87 bd-no-margins bd-content-element">
@@ -303,7 +306,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </div>
 	
 		<div class=" bd-columnwrapper-50 
- col-sm-6">
+ col-lg-3
+ col-md-6
+ col-sm-6
+ col-xs-12">
     <div class="bd-layoutcolumn-50 bd-column" ><div class="bd-vertical-align-wrapper"><div class=" bd-layoutbox-35 bd-no-margins clearfix">
     <div class="bd-container-inner">
         <h2 class=" bd-textblock-105 bd-no-margins bd-content-element">
@@ -320,7 +326,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </div>
 	
 		<div class=" bd-columnwrapper-48 
- col-sm-6">
+ col-lg-3
+ col-md-6
+ col-sm-6
+ col-xs-12">
     <div class="bd-layoutcolumn-48 bd-column" ><div class="bd-vertical-align-wrapper"><div class=" bd-layoutbox-31 bd-no-margins clearfix">
     <div class="bd-container-inner">
         <h2 class=" bd-textblock-151 bd-no-margins bd-content-element">
@@ -336,7 +345,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </div>
 	
 		<div class=" bd-columnwrapper-46 
- col-sm-6">
+ col-lg-3
+ col-md-6
+ col-sm-6
+ col-xs-12">
     <div class="bd-layoutcolumn-46 bd-column" ><div class="bd-vertical-align-wrapper"><div class=" bd-layoutbox-27 bd-no-margins clearfix">
     <div class="bd-container-inner">
         <h2 class=" bd-textblock-163 bd-no-margins bd-content-element">
@@ -344,8 +356,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </h2>
 	
 		<p class=" bd-textblock-165 bd-no-margins bd-content-element">
-    Just because your site is doing well, it doesn't mean it can't do better. 
-<br><br>Conversion Rate Optimisation or CRO is about using tried and tested methods of improving your website's conversion rate, while using split testing and user testing to customise these methods for your site.
+    Is your website converting well?&nbsp;<br><br>Conversion Rate Optimisation (CRO) is combining tried and tested methods of improving a sites conversion rate, while using split testing and user testing to further optimise conversions.
 </p>
     </div>
 </div></div></div>
@@ -382,7 +393,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="container-fluid">
             <div class="row ">
                 <div class=" bd-columnwrapper-51 
- col-sm-6">
+ col-lg-3
+ col-md-6
+ col-sm-6
+ col-xs-12">
     <div class="bd-layoutcolumn-51 bd-column" ><div class="bd-vertical-align-wrapper"><div class=" bd-layoutbox-41 bd-no-margins clearfix">
     <div class="bd-container-inner">
         <h2 class=" bd-textblock-109 bd-no-margins bd-content-element">
@@ -397,7 +411,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </div>
 	
 		<div class=" bd-columnwrapper-52 
- col-sm-6">
+ col-lg-3
+ col-md-6
+ col-sm-6
+ col-xs-12">
     <div class="bd-layoutcolumn-52 bd-column" ><div class="bd-vertical-align-wrapper"><div class=" bd-layoutbox-42 bd-no-margins clearfix">
     <div class="bd-container-inner">
         <h2 class=" bd-textblock-139 bd-no-margins bd-content-element">
@@ -412,7 +429,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </div>
 	
 		<div class=" bd-columnwrapper-62 
- col-sm-6">
+ col-lg-3
+ col-md-6
+ col-sm-6
+ col-xs-12">
     <div class="bd-layoutcolumn-62 bd-column" ><div class="bd-vertical-align-wrapper"><div class=" bd-layoutbox-46 bd-no-margins clearfix">
     <div class="bd-container-inner">
         <h2 class=" bd-textblock-144 bd-no-margins bd-content-element">
@@ -427,7 +447,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </div>
 	
 		<div class=" bd-columnwrapper-63 
- col-sm-6">
+ col-lg-3
+ col-md-6
+ col-sm-6
+ col-xs-12">
     <div class="bd-layoutcolumn-63 bd-column" ><div class="bd-vertical-align-wrapper"><div class=" bd-layoutbox-49 bd-no-margins clearfix">
     <div class="bd-container-inner">
         <h2 class=" bd-textblock-146 bd-no-margins bd-content-element">
