--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1362"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1364"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1362" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1362"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1364" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1364"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1362">
-<script src="./assets/js/layout.ie.js?1.0.1362"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1364">
+<script src="./assets/js/layout.ie.js?1.0.1364"></script>
 <![endif]-->
 <link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1362"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1364"></script>
 	
     <title>Affordable Digital Marketing Support  Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1362">
-	<script src="./assets/js/script.js?1.0.1362"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1364">
+	<script src="./assets/js/script.js?1.0.1364"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -279,7 +279,34 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     
     <div class=" bd-htmlcontent-1 bd-margins" 
  data-page-id="page.0">
-    <section class=" bd-section-12 hidden-md hidden-sm hidden-xs bd-tagstyles" id="section29" data-section-title="Section">
+    <div class=" bd-parallaxbackground-2 bd-parallax-bg-effect" data-control-selector=".bd-section-5"><section class=" bd-section-5 hidden-lg bd-tagstyles bd-textureoverlay bd-textureoverlay-2 " id="section4" data-section-title="Row with Background Image">
+    <div class="bd-container-inner bd-margins clearfix">
+        <div class=" bd-layoutbox-53 bd-no-margins clearfix">
+    <div class="bd-container-inner">
+        <h2 class=" bd-textblock-178 bd-content-element">
+    Professional, affordable
+</h2>
+	
+		<h2 class=" bd-textblock-176 bd-content-element">
+    Digital Support
+</h2>
+	
+		<p class=" bd-textblock-175 bd-content-element">
+    Build brand awareness, increase your website traffic and improve conversions
+</p>
+	
+		<div class=" bd-spacer-11 clearfix"></div>
+	
+		<a 
+ href="./free-website-report.html" class="bd-linkbutton-22  bd-button-67  bd-own-margins bd-content-element"    >
+    Get a free website report<br>
+</a>
+    </div>
+</div>
+    </div>
+</section></div>
+	
+		<section class=" bd-section-12 hidden-md hidden-sm hidden-xs bd-tagstyles" id="section29" data-section-title="Section">
     <div class="bd-container-inner bd-margins clearfix">
         <div class=" bd-customhtml-11 bd-tagstyles">
     <div class="bd-container-inner bd-content-element">
