Changed services wording and http fix

--- a/digital-marketing-services/free-website-report.html
+++ b/digital-marketing-services/free-website-report.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="../assets/css/layout.ie.css?1.0.779">
 <script src="../assets/js/layout.ie.js?1.0.779"></script>
 <![endif]-->
-<link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
+<link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="../assets/js/layout.core.js"></script>
 <script src="../assets/js/CloudZoom.js?1.0.779"></script>
 	
@@ -422,7 +422,7 @@
 		<div class=" bd-pagefooter-2 hidden-md hidden-sm hidden-xs hidden-lg">
     <div class="bd-container-inner">
         
-            <a href='http://www.themler.com/html-templates' target="_blank">HTML Template</a> created with <a href='http://themler.com' target="_blank">Themler</a>.
+            <a href='//www.themler.com/html-templates' target="_blank">HTML Template</a> created with <a href='//themler.com' target="_blank">Themler</a>.
     </div>
 </div>
     </div>
