--- a/thank-you.html
+++ b/thank-you.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1375"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1371"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1375" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1375"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1371" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1371"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1375">
-<script src="./assets/js/layout.ie.js?1.0.1375"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1371">
+<script src="./assets/js/layout.ie.js?1.0.1371"></script>
 <![endif]-->
-<link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
+<link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1375"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1371"></script>
 	
     <title>Thank You | Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1375">
-	<script src="./assets/js/script.js?1.0.1375"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1371">
+	<script src="./assets/js/script.js?1.0.1371"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -398,7 +398,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="bd-container-inner bd-content-element">
         <script type="application/ld+json">
 {
-	"@context": "http://schema.org",
+	"@context": "//schema.org",
 	"@type": "LocalBusiness",
 	"name": "Smart Sprout Affordable Digital Marketing",
 	"address": {
@@ -433,7 +433,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<div class=" bd-pagefooter-2 hidden-md hidden-sm hidden-xs hidden-lg">
     <div class="bd-container-inner">
         
-            <a href='http://www.themler.io/html-templates' target="_blank">HTML Template</a> created with <a href='http://themler.io' target="_blank">Themler</a>.
+            <a href='//www.themler.io/html-templates' target="_blank">HTML Template</a> created with <a href='//themler.io' target="_blank">Themler</a>.
     </div>
 </div>
     </div>
