logo spacer fix

--- a/digital-marketing-services/search-engine-optimisation.html
+++ b/digital-marketing-services/search-engine-optimisation.html
@@ -398,7 +398,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                
                                >
                                 <img class=" bd-imagestyles"
-                                     src="../assets/images/4bfe0ab7c78a6854f5ed1165a6daa752_LogoSpacer.png"
+                                     src="/logo-spacer.png"
                                       >
                             </a>
                 </div>
