--- a/vegan.html
+++ b/vegan.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1374">
 <script src="./assets/js/layout.ie.js?1.0.1374"></script>
 <![endif]-->
-<link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
+<link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
 <script src="./assets/js/CloudZoom.js?1.0.1374"></script>
 	
@@ -557,7 +557,7 @@ and associated costs.
     <div class="bd-container-inner bd-content-element">
         <script type="application/ld+json">
 {
-	"@context": "http://schema.org",
+	"@context": "//schema.org",
 	"@type": "LocalBusiness",
 	"name": "Smart Sprout Affordable Digital Marketing",
 	"address": {
@@ -592,7 +592,7 @@ and associated costs.
 		<div class=" bd-pagefooter-2 hidden-md hidden-sm hidden-xs hidden-lg">
     <div class="bd-container-inner">
         
-            <a href='http://www.themler.io/html-templates' target="_blank">HTML Template</a> created with <a href='http://themler.io' target="_blank">Themler</a>.
+            <a href='//www.themler.io/html-templates' target="_blank">HTML Template</a> created with <a href='//themler.io' target="_blank">Themler</a>.
     </div>
 </div>
     </div>
