--- a/digital-marketing-services/search-engine-optimisation.html
+++ b/digital-marketing-services/search-engine-optimisation.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="../assets/js/jquery.js?1.0.1374"></script>
+<script type="text/javascript" src="../assets/js/jquery.js?1.0.1389"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="../assets/css/bootstrap.css?1.0.1374" media="screen" />
-<script type="text/javascript" src="../assets/js/bootstrap.min.js?1.0.1374"></script>
+<link rel="stylesheet" href="../assets/css/bootstrap.css?1.0.1389" media="screen" />
+<script type="text/javascript" src="../assets/js/bootstrap.min.js?1.0.1389"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="../assets/css/layout.ie.css?1.0.1374">
-<script src="../assets/js/layout.ie.js?1.0.1374"></script>
+<link rel="stylesheet" href="../assets/css/layout.ie.css?1.0.1389">
+<script src="../assets/js/layout.ie.js?1.0.1389"></script>
 <![endif]-->
 <link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="../assets/js/layout.core.js"></script>
-<script src="../assets/js/CloudZoom.js?1.0.1374"></script>
+<script src="../assets/js/CloudZoom.js?1.0.1389"></script>
 	
     <title>Search Engine Optimisation - Smart Sprout</title>
-	<link rel="stylesheet" href="../assets/css/style.css?1.0.1374">
-	<script src="../assets/js/script.js?1.0.1374"></script>
+	<link rel="stylesheet" href="../assets/css/style.css?1.0.1389">
+	<script src="../assets/js/script.js?1.0.1389"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -320,6 +320,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     Often rushed by digital marketing agencies, keyword or topic research is the foundation of SEO and paid campaigns. 
 <br><br>Get this right and improving search engine rankings will be significantly easier&nbsp;
 </p>
+	
+		<a 
+ name="What is Keyword Research"
+ href="/what-is-keyword-research.html" class="bd-linkbutton-2  bd-button  bd-own-margins bd-content-element"    >
+    What is keyword research?
+</a>
     </div>
 </div></div></div>
 </div>
@@ -340,6 +346,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <br>
 <br>A solid competition research strategy will help you to analyse the strengths and weaknesses of your competition and adjust accordingly.
 </p>
+	
+		<a 
+ href="" class="bd-linkbutton-24  bd-button  bd-own-margins bd-content-element"    >
+    Read More
+</a>
     </div>
 </div></div></div>
 </div>
