--- a/pricing.html
+++ b/pricing.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1395"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1400"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1395" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1395"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1400" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1400"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1395">
-<script src="./assets/js/layout.ie.js?1.0.1395"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1400">
+<script src="./assets/js/layout.ie.js?1.0.1400"></script>
 <![endif]-->
 <link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1395"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1400"></script>
 	
     <title>Low-cost Digital Marketing Support Pricing | Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1395">
-	<script src="./assets/js/script.js?1.0.1395"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1400">
+	<script src="./assets/js/script.js?1.0.1400"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -305,6 +305,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </p>
 </div>
 	
+		<div class="bd-containereffect-23 container-effect container "><div class=" bd-layoutbox-13  bd-no-margins clearfix">
+    <div class="bd-container-inner">
+        <h2 class=" bd-textblock-51 bd-no-margins bd-content-element">
+    Low-cost Digital Marketing Subscriptions
+</h2>
+    </div>
+</div>
+</div>
+	
 		<section class=" bd-section-9 bd-tagstyles" id="section9" data-section-title="Section">
     <div class="bd-container-inner bd-margins clearfix">
         <div class=" bd-layoutcontainer-7 bd-columns bd-no-margins">
@@ -452,6 +461,169 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <p class=" bd-textblock-194 bd-content-element">
     *7 day support and mentoring is appointment only, subject to availability and is only available between 11am and 10pm Monday to Sunday. Reports are carried out by phone or email to reduce admin time and associated costs.
 </p>
+    </div>
+</div>
+    </div>
+</section>
+	
+		<section class=" bd-section-7 bd-tagstyles" id="section7" data-section-title="Section">
+    <div class="bd-container-inner bd-margins clearfix">
+        <div class=" bd-layoutbox-6 bd-no-margins clearfix">
+    <div class="bd-container-inner">
+        <h2 class=" bd-textblock-2 bd-no-margins bd-content-element">
+    Individual Low-cost Digital Marketing Services
+</h2>
+	
+		<p class=" bd-textblock-4 bd-content-element">
+    The below low-cost digital marketing services can be purchased without a subscription. Some of these affordable services will be offered as part of the subscriptions above and others may be discounted for subscribers. These prices are a guide. Fees are relative to project size and timescales.
+</p>
+    </div>
+</div>
+	
+		<div class=" bd-layoutcontainer-9 bd-columns bd-no-margins">
+    <div class="bd-container-inner">
+        <div class="container-fluid">
+            <div class="row ">
+                <div class=" bd-columnwrapper-22 
+ col-sm-6">
+    <div class="bd-layoutcolumn-22 bd-column" ><div class="bd-vertical-align-wrapper"><h3 class=" bd-textblock-10 bd-no-margins bd-content-element">
+    Low Cost Website Health Check
+</h3>
+	
+		<div class=" bd-layoutcontainer-38 bd-columns bd-no-margins">
+    <div class="bd-container-inner">
+        <div class="container-fluid">
+            <div class="row ">
+                <div class=" bd-columnwrapper-90 
+ col-sm-6">
+    <div class="bd-layoutcolumn-90 bd-column" ><div class="bd-vertical-align-wrapper"><p class=" bd-textblock-47 bd-content-element">
+    404 error report
+<br>Duplicate content check
+<br>Redirect error report
+<br>Canonical error report
+<br>Malware and phishing scan<br>
+</p></div></div>
+</div>
+	
+		<div class=" bd-columnwrapper-89 
+ col-sm-6">
+    <div class="bd-layoutcolumn-89 bd-column" ><div class="bd-vertical-align-wrapper"><p class=" bd-textblock-45 bd-content-element">
+    £10<br>£17<br>£10<br>£10<br>£10
+</p></div></div>
+</div>
+            </div>
+        </div>
+    </div>
+</div></div></div>
+</div>
+	
+		<div class=" bd-columnwrapper-24 
+ col-sm-6">
+    <div class="bd-layoutcolumn-24 bd-column" ><div class="bd-vertical-align-wrapper"><h3 class=" bd-textblock-39 bd-no-margins bd-content-element">
+    Value SEO Baseline Research
+</h3>
+	
+		<div class=" bd-layoutcontainer-42 bd-columns bd-no-margins">
+    <div class="bd-container-inner">
+        <div class="container-fluid">
+            <div class="row ">
+                <div class=" bd-columnwrapper-102 
+ col-sm-6">
+    <div class="bd-layoutcolumn-102 bd-column" ><div class="bd-vertical-align-wrapper"><p class=" bd-textblock-15 bd-content-element">
+    Top pages Report
+<br>Top social shares report
+<br>Google cache report
+<br>External Anchor text report
+<br>Authority (ranking potential) report<br>
+</p></div></div>
+</div>
+	
+		<div class=" bd-columnwrapper-101 
+ col-sm-6">
+    <div class="bd-layoutcolumn-101 bd-column" ><div class="bd-vertical-align-wrapper"><p class=" bd-textblock-22 bd-content-element">
+    £47<br>£27<br>£10<br>£27<br>£47
+</p></div></div>
+</div>
+            </div>
+        </div>
+    </div>
+</div></div></div>
+</div>
+            </div>
+        </div>
+    </div>
+</div>
+    </div>
+</section>
+	
+		<section class=" bd-section-8 bd-tagstyles" id="section8" data-section-title="Section">
+    <div class="bd-container-inner bd-margins clearfix">
+        <div class=" bd-spacer-3 clearfix"></div>
+	
+		<div class=" bd-layoutcontainer-54 bd-columns bd-no-margins">
+    <div class="bd-container-inner">
+        <div class="container-fluid">
+            <div class="row ">
+                <div class=" bd-columnwrapper-171 
+ col-sm-6">
+    <div class="bd-layoutcolumn-171 bd-column" ><div class="bd-vertical-align-wrapper"><h3 class=" bd-textblock-169 bd-no-margins bd-content-element">
+    Low Budget Competitor Research
+</h3>
+	
+		<div class=" bd-layoutcontainer-56 bd-columns bd-no-margins">
+    <div class="bd-container-inner">
+        <div class="container-fluid">
+            <div class="row ">
+                <div class=" bd-columnwrapper-175 
+ col-sm-6">
+    <div class="bd-layoutcolumn-175 bd-column" ><div class="bd-vertical-align-wrapper"><p class=" bd-textblock-168 bd-content-element">
+    Competitor keyword report<br>Competitor top content report<br>Competitor backlink report (list only)<br>Competitor backlink authority report<br>Comprehensive competitor report
+</p></div></div>
+</div>
+	
+		<div class=" bd-columnwrapper-174 
+ col-sm-6">
+    <div class="bd-layoutcolumn-174 bd-column" ><div class="bd-vertical-align-wrapper"><p class=" bd-textblock-143 bd-content-element">
+    £37<br>£27<br>£27<br>£27<br>£97
+</p></div></div>
+</div>
+            </div>
+        </div>
+    </div>
+</div></div></div>
+</div>
+	
+		<div class=" bd-columnwrapper-166 
+ col-sm-6">
+    <div class="bd-layoutcolumn-166 bd-column" ><div class="bd-vertical-align-wrapper"><h3 class=" bd-textblock-142 bd-no-margins bd-content-element">
+    Affordable Content Marketing Strategy
+</h3>
+	
+		<div class=" bd-layoutcontainer-55 bd-columns bd-no-margins">
+    <div class="bd-container-inner">
+        <div class="container-fluid">
+            <div class="row ">
+                <div class=" bd-columnwrapper-170 
+ col-sm-6">
+    <div class="bd-layoutcolumn-170 bd-column" ><div class="bd-vertical-align-wrapper"><p class=" bd-textblock-140 bd-content-element">
+    Blog content topic research report<br>Content creation lesson (phone/Skype)<br>Content calendar<br>Content outreach strategy<br>
+<br>Comprehensive content strategy
+</p></div></div>
+</div>
+	
+		<div class=" bd-columnwrapper-169 
+ col-sm-6">
+    <div class="bd-layoutcolumn-169 bd-column" ><div class="bd-vertical-align-wrapper"><p class=" bd-textblock-138 bd-content-element">
+    £197<br>£197<br>£297<br>£197<br>£397
+</p></div></div>
+</div>
+            </div>
+        </div>
+    </div>
+</div></div></div>
+</div>
+            </div>
+        </div>
     </div>
 </div>
     </div>
