--- a/pricing.html
+++ b/pricing.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1403"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1404"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1403" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1403"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1404" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1404"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1403">
-<script src="./assets/js/layout.ie.js?1.0.1403"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1404">
+<script src="./assets/js/layout.ie.js?1.0.1404"></script>
 <![endif]-->
 <link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1403"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1404"></script>
 	
     <title>Low-cost Digital Marketing Support Pricing | Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1403">
-	<script src="./assets/js/script.js?1.0.1403"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1404">
+	<script src="./assets/js/script.js?1.0.1404"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -455,14 +455,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
     </div>
 </div>
-	
-		<div class=" bd-layoutbox-60 bd-no-margins clearfix">
-    <div class="bd-container-inner">
-        <p class=" bd-textblock-194 bd-content-element">
-    *7 day support and mentoring is appointment only, subject to availability and is only available between 11am and 10pm Monday to Sunday. Reports are carried out by phone or email to reduce admin time and associated costs.
-</p>
-    </div>
-</div>
     </div>
 </section>
 	
@@ -475,7 +467,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </h2>
 	
 		<p class=" bd-textblock-4 bd-content-element">
-    The below low-cost digital marketing services can be purchased without a subscription. Some of these affordable services will be offered as part of the subscriptions above and others may be discounted for subscribers. These prices are a guide. Fees are relative to project size and timescales.
+    These low-cost digital marketing services can be purchased without a subscription — prices listed are a guide and may vary based on project size. Some of these services are free or discounted as part of the subscriptions above.
 </p>
     </div>
 </div>
@@ -631,6 +623,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </div>
     </div>
 </section>
+	
+		<div class="bd-containereffect-1 container-effect container "><div class=" bd-layoutbox-17  bd-no-margins clearfix">
+    <div class="bd-container-inner">
+        <p class=" bd-textblock-17 bd-content-element">
+    *7 day support and mentoring is appointment only, subject to availability and is only available between 11am and 10pm Monday to Sunday. Reports are carried out by phone or email to reduce admin time and associated costs.
+</p>
+    </div>
+</div>
+</div>
 	
 		<div class="bd-containereffect-20 container-effect container "><div class=" bd-spacer-90  clearfix"></div></div>
 </div>
