Pricing column fix

--- a/free-website-report.html
+++ b/free-website-report.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1419"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1423"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1419" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1419"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1423" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1423"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1419">
-<script src="./assets/js/layout.ie.js?1.0.1419"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1423">
+<script src="./assets/js/layout.ie.js?1.0.1423"></script>
 <![endif]-->
 <link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1419"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1423"></script>
 	
     <title>Free Website Report | Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1419">
-	<script src="./assets/js/script.js?1.0.1419"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1423">
+	<script src="./assets/js/script.js?1.0.1423"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -505,12 +505,12 @@ textarea {
 		<div class=" bd-spacer-9 clearfix"></div>
 	
 		<p class=" bd-textblock-52 bd-no-margins bd-content-element">
-    Useful Links
+    Useful Links:
 </p>
 	
 		<div class=" bd-customhtml-2 bd-tagstyles">
     <div class="bd-container-inner bd-content-element">
-        <p class="footer-links"><a href="./" draggable="false">Low-cost Marketing<br></a></p><p class="footer-links"><a href="./pricing.html" draggable="false">Smart Sprout Pricing</a></p><p class="footer-links"><a href="./contact.html" draggable="false" style="background-color: rgb(133, 133, 133);">Contact&nbsp;Smart Sprout</a><br></p><p class="footer-links"><br></p>
+        <p class="footer-links"><a href="./" draggable="false">Low-cost Marketing<br></a></p><p class="footer-links"><a href="./pricing.html" draggable="false">Smart Sprout Pricing</a></p><p class="footer-links"><a href="./contact.html" draggable="false" style="background-color: rgb(133, 133, 133);">Contact&nbsp;Smart Sprout</a><br></p><p class="footer-links"><a href="https://smartsprout.co.uk/duplicate-content-faq">What is Duplicate Content?</a></p><p class="footer-links"><a href="https://smartsprout.co.uk/404s-dead-links-missing-pages">404s, Dead Links and Missing Pages</a></p><p class="footer-links"><br></p>
     </div>
 </div></div></div>
 </div>
