--- a/pricing.html
+++ b/pricing.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1419"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1423"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1419" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1419"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1423" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1423"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1419">
-<script src="./assets/js/layout.ie.js?1.0.1419"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1423">
+<script src="./assets/js/layout.ie.js?1.0.1423"></script>
 <![endif]-->
 <link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1419"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1423"></script>
 	
     <title>Low-cost Digital Marketing Support Pricing | Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1419">
-	<script src="./assets/js/script.js?1.0.1419"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1423">
+	<script src="./assets/js/script.js?1.0.1423"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -482,16 +482,21 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     Low Cost Website Health Check
 </h3>
 	
-		<div class=" bd-layoutcontainer-38 bd-columns bd-no-margins">
+		<p class=" bd-textblock-222 hidden-md hidden-sm hidden-lg bd-content-element">
+    <a href="https://smartsprout.co.uk/404s-dead-links-missing-pages" draggable="false">
+    404 error</a> report - £10<br><a href="https://smartsprout.co.uk/duplicate-content-faq" draggable="false">Duplicate content</a> check - £17<br>Redirect error report - £10<br>Canonical error report - £10<br>Malware and phishing scan - £10<br>
+</p>
+	
+		<div class=" bd-layoutcontainer-38 hidden-xs bd-columns bd-no-margins">
     <div class="bd-container-inner">
         <div class="container-fluid">
             <div class="row ">
                 <div class=" bd-columnwrapper-90 
  col-sm-6">
     <div class="bd-layoutcolumn-90 bd-column" ><div class="bd-vertical-align-wrapper"><p class=" bd-textblock-47 bd-content-element">
-    <a href="https://smartsprout.co.uk/404s-dead-links-missing-pages">
+    <a href="https://smartsprout.co.uk/404s-dead-links-missing-pages" draggable="false">
     404 error</a> report
-<br><a href="https://smartsprout.co.uk/duplicate-content-faq">Duplicate content</a> check
+<br><a href="https://smartsprout.co.uk/duplicate-content-faq" draggable="false">Duplicate content</a> check
 <br>Redirect error report<br>Canonical error report
 <br>Malware and phishing scan<br>
 </p></div></div>
@@ -515,7 +520,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     Value SEO Baseline Research
 </h3>
 	
-		<div class=" bd-layoutcontainer-42 bd-columns bd-no-margins">
+		<p class=" bd-textblock-225 hidden-md hidden-sm hidden-lg bd-content-element">
+    Top pages Report - £47<br>Top social shares report - £27<br>Google cache report - £10<br>External Anchor text report - £27<br>Page/domain authority report - £47<br>
+</p>
+	
+		<div class=" bd-layoutcontainer-42 hidden-xs bd-columns bd-no-margins">
     <div class="bd-container-inner">
         <div class="container-fluid">
             <div class="row ">
@@ -524,9 +533,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="bd-layoutcolumn-102 bd-column" ><div class="bd-vertical-align-wrapper"><p class=" bd-textblock-15 bd-content-element">
     Top pages Report
 <br>Top social shares report
-<br>Google cache report
-<br>External Anchor text report
-<br>Authority (ranking potential) report<br>
+<br>Google cache report<br>External Anchor text report
+<br>Page/domain authority report<br>
 </p></div></div>
 </div>
 	
@@ -550,9 +558,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	
 		<section class=" bd-section-8 bd-tagstyles" id="section8" data-section-title="Section">
     <div class="bd-container-inner bd-margins clearfix">
-        <div class=" bd-spacer-3 clearfix"></div>
-	
-		<div class=" bd-layoutcontainer-54 bd-columns bd-no-margins">
+        <div class=" bd-layoutcontainer-54 bd-columns bd-no-margins">
     <div class="bd-container-inner">
         <div class="container-fluid">
             <div class="row ">
@@ -562,7 +568,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     Low Budget Competitor Research
 </h3>
 	
-		<div class=" bd-layoutcontainer-56 bd-columns bd-no-margins">
+		<p class=" bd-textblock-229 hidden-md hidden-sm hidden-lg bd-content-element">
+    Competitor keyword report - £37<br>Competitor top content report - £27<br>Competitor backlink report (list only) - £27<br>Competitor backlink authority report - £27<br>Comprehensive competitor report - £97
+</p>
+	
+		<div class=" bd-layoutcontainer-56 hidden-xs bd-columns bd-no-margins">
     <div class="bd-container-inner">
         <div class="container-fluid">
             <div class="row ">
@@ -591,7 +601,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     Affordable Content Marketing Strategy
 </h3>
 	
-		<div class=" bd-layoutcontainer-55 bd-columns bd-no-margins">
+		<p class=" bd-textblock-232 hidden-md hidden-sm hidden-lg bd-content-element">
+    Blog content topic research report - £197<br>Content creation lesson (phone/Skype) - £197<br>Content calendar - £297<br>Content outreach strategy - £197<br>Comprehensive content strategy - £297
+</p>
+	
+		<div class=" bd-layoutcontainer-55 hidden-xs bd-columns bd-no-margins">
     <div class="bd-container-inner">
         <div class="container-fluid">
             <div class="row ">
@@ -686,12 +700,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<div class=" bd-spacer-9 clearfix"></div>
 	
 		<p class=" bd-textblock-52 bd-no-margins bd-content-element">
-    Useful Links
+    Useful Links:
 </p>
 	
 		<div class=" bd-customhtml-2 bd-tagstyles">
     <div class="bd-container-inner bd-content-element">
-        <p class="footer-links"><a href="./" draggable="false">Low-cost Marketing<br></a></p><p class="footer-links"><a href="./pricing.html" draggable="false">Smart Sprout Pricing</a></p><p class="footer-links"><a href="./contact.html" draggable="false" style="background-color: rgb(133, 133, 133);">Contact&nbsp;Smart Sprout</a><br></p><p class="footer-links"><br></p>
+        <p class="footer-links"><a href="./" draggable="false">Low-cost Marketing<br></a></p><p class="footer-links"><a href="./pricing.html" draggable="false">Smart Sprout Pricing</a></p><p class="footer-links"><a href="./contact.html" draggable="false" style="background-color: rgb(133, 133, 133);">Contact&nbsp;Smart Sprout</a><br></p><p class="footer-links"><a href="https://smartsprout.co.uk/duplicate-content-faq">What is Duplicate Content?</a></p><p class="footer-links"><a href="https://smartsprout.co.uk/404s-dead-links-missing-pages">404s, Dead Links and Missing Pages</a></p><p class="footer-links"><br></p>
     </div>
 </div></div></div>
 </div>
