Canonical page added and a few page changes
Added elements to current pages to increase time on page.

--- a/thank-you.html
+++ b/thank-you.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1428"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1452"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1428" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1428"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1452" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1452"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1428">
-<script src="./assets/js/layout.ie.js?1.0.1428"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1452">
+<script src="./assets/js/layout.ie.js?1.0.1452"></script>
 <![endif]-->
-<link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
+<link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1428"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1452"></script>
 	
-    <title>Thank You | Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1428">
-	<script src="./assets/js/script.js?1.0.1428"></script>
+    <title>Thank You - Smart Sprout</title>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1452">
+	<script src="./assets/js/script.js?1.0.1452"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -329,23 +329,37 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	
 		<p class=" bd-textblock-71 bd-content-element">
     <a href="mailto:info@smartsprout.co.uk">info@smartsprout.co.uk</a>
+</p>
+	
+		<span class="bd-iconlink-6 bd-no-margins bd-own-margins bd-icon-36 bd-icon "></span>
+	
+		<div class=" bd-spacer-26 clearfix"></div>
+	
+		<p class=" bd-textblock-271 bd-no-margins bd-content-element">
+    Location:
+</p>
+	
+		<p class=" bd-textblock-273 bd-content-element">
+    Southampton, UK
 </p></div></div>
 </div>
 	
 		<div class=" bd-columnwrapper-14 
  col-md-3
  col-sm-6">
-    <div class="bd-layoutcolumn-14 bd-column" ><div class="bd-vertical-align-wrapper"><span class="bd-iconlink-2 bd-no-margins bd-own-margins bd-icon-24 bd-icon "></span>
+    <div class="bd-layoutcolumn-14 bd-column" ><div class="bd-vertical-align-wrapper"><span class="bd-iconlink-8 bd-own-margins bd-icon-47 bd-icon "></span>
 	
 		<div class=" bd-spacer-7 clearfix"></div>
 	
 		<p class=" bd-textblock-83 bd-no-margins bd-content-element">
-    Location:
+    Useful Links:
 </p>
 	
-		<p class=" bd-textblock-85 bd-content-element">
-    Southampton, UK
-</p></div></div>
+		<div class=" bd-customhtml-7 bd-tagstyles">
+    <div class="bd-container-inner bd-content-element">
+        <p class="footer-links"><a href="./" draggable="false">Low-cost Marketing<br></a></p><p class="footer-links"><a href="./pricing.html" draggable="false">Smart Sprout Pricing</a></p><p class="footer-links"><a href="./contact.html" draggable="false" style="background-color: rgb(133, 133, 133);">Contact&nbsp;Smart Sprout</a></p><p class="footer-links"><br></p>
+    </div>
+</div></div></div>
 </div>
 	
 		<div class=" bd-columnwrapper-16 
@@ -356,12 +370,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<div class=" bd-spacer-9 clearfix"></div>
 	
 		<p class=" bd-textblock-52 bd-no-margins bd-content-element">
-    Useful Links:
+    Top Content:
 </p>
 	
 		<div class=" bd-customhtml-2 bd-tagstyles">
     <div class="bd-container-inner bd-content-element">
-        <p class="footer-links"><a href="./" draggable="false">Low-cost Marketing<br></a></p><p class="footer-links"><a href="./pricing.html" draggable="false">Smart Sprout Pricing</a></p><p class="footer-links"><a href="./contact.html" draggable="false" style="background-color: rgb(133, 133, 133);">Contact&nbsp;Smart Sprout</a><br></p><p class="footer-links"><a href="https://smartsprout.co.uk/duplicate-content-faq">What is Duplicate Content?</a></p><p class="footer-links"><a href="https://smartsprout.co.uk/404s-dead-links-missing-pages">404s, Dead Links and Missing Pages</a></p><p class="footer-links"><br></p>
+        <p class="footer-links"><a href="https://smartsprout.co.uk/duplicate-content-faq" draggable="false" style="background-color: rgb(133, 133, 133);">What is Duplicate Content?</a><br></p><p class="footer-links"><a href="https://smartsprout.co.uk/404s-dead-links-missing-pages" draggable="false">404s, Dead Links and Missing Pages</a></p><p class="footer-links"><a href="https://smartsprout.co.uk/redirect-chains-redirect-loops">301 Redirects and Redirect Errors</a></p><p class="footer-links"><a href="https://smartsprout.co.uk/canonical-urls-canonical-tags">Canonical URLs and Canonical Tags</a></p><p class="footer-links"><br></p>
     </div>
 </div></div></div>
 </div>
@@ -394,7 +408,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="bd-container-inner bd-content-element">
         <script type="application/ld+json">
 {
-	"@context": "//schema.org",
+	"@context": "http://schema.org",
 	"@type": "LocalBusiness",
 	"name": "Smart Sprout Affordable Digital Marketing",
 	"address": {
@@ -429,7 +443,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<div class=" bd-pagefooter-2 hidden-md hidden-sm hidden-xs hidden-lg">
     <div class="bd-container-inner">
         
-            <a href='//www.themler.io/html-templates' target="_blank">HTML Template</a> created with <a href='//themler.io' target="_blank">Themler</a>.
+            <a href='http://www.themler.io/html-templates' target="_blank">HTML Template</a> created with <a href='http://themler.io' target="_blank">Themler</a>.
     </div>
 </div>
     </div>
